kubernetes/apps/default/docs/app/httproute.yaml
---
# yaml-language-server: $schema=../../../../schemas/gateway.networking.k8s.io/httproute_v1-subst.json
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: docs
spec:
  hostnames:
    # Hostname is substituted by Flux postBuild using SECRET_DOMAIN.
    - docs.${SECRET_DOMAIN}
  parentRefs:
    - name: envoy-internal
      namespace: network
      sectionName: https
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: docs-frontend
          namespace: default
          port: 80
